# drama

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  README.md  build.gradle  dev.nix  docker-compose.yml  include-env.sh  rust-toolchain.toml  settings.gradle
.github/workflows/: test.yml
configs/: drama-config-example.yml
migrations/: 20210821122722_initial.down.sql  20210821122722_initial.up.sql  20211006185227_registration_token.down.sql  20211006185227_registration_token.up.sql  20211006185227_token.down.sql  20211006185227_token.up.sql  20211031150651_user.down.sql  20211031150651_user.up.sql  20211106101003_tokens.down.sql  20211106101003_tokens.up.sql  20211114182040_subreddit.down.sql  20211114182040_subreddit.up.sql
migrations/2021-08-21-160614_subreddit/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  model.rs  pg.rs  queue.rs  reddit.rs  schema.rs  task.rs
src/main/java/com/github/artslob/drama/: DramaApplication.java
src/main/java/com/github/artslob/drama/controllers/: Start.java
src/main/java/com/github/artslob/drama/domain/: TokensResponse.java  UserIdentityResponse.java
src/main/java/com/github/artslob/drama/entity/: AccessToken.java  RefreshToken.java  User.java
src/main/resources/: application.example.properties
src/main/resources/db_migrations/: V1__initial.sql  V2__tokens.sql  V3__user.sql
src/reddit/: client.rs  mod.rs  model.rs
src/test/java/com/github/artslob/drama/: DramaApplicationTests.java  RedditWireMockExtension.java  SmokeTest.java  TestWithMockMvc.java  TestWithWireMock.java
src/test/resources/: application.properties
(+4 files in other folders)
