[package]
name = "drama"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/artslob/drama"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
http = "0.2"
diesel = { version = "1.4.4", features = ["postgres"] }
