[package]
name = "drama"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/artslob/drama"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
http = "0.2"
lapin = "1.8.0"
futures-util = "0.3.16"
log = "0.4.14"
env_logger = "0.9.0"
async-global-executor = "2.0.2"
